--- a/time/index.html
+++ b/time/index.html
@@ -9,6 +9,6 @@
     var normalTime = (today.getHours() * 60 * 60) + (today.getMinutes() * 60) + today.getSeconds()
     var swrtTime = normalTime / 2299;
     document.getElementById("timeP").innerHTML = swrtTime;
-    <script>
+    </script>
   </body>
 </html>
