--- a/time/index.html
+++ b/time/index.html
@@ -8,7 +8,7 @@
     var today = new Date();
     var normalTime = (today.getHours() * 60 * 60) + (today.getMinutes() * 60) + today.getSeconds()
     var swrtTime = normalTime / 2299;
-    var time = swrtTime.toString() + " HITFs";
+    var time = swrtTime.toString() + " HTIFs";
     document.getElementById("timeP").innerHTML = time;
     </script>
   </body>
